objects/ICR_History_Approval_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bypass_ID_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass ID Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalCobra_Dept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalCobra Dept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_if_ASO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if ASO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Creator_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Creator Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Approved_Calculated_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved Calculated Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved_GMT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved GMT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_UW__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned to UW</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Over__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Days Over</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_Uploaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document(s) Uploaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EA_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EA Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBA_Logged_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EBA Logged By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBA_Logged_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EBA Logged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICR_History__c</fullName>
        <label>ICR History</label>
        <referenceTo>ICR_History__c</referenceTo>
        <relationshipLabel>ICR History Approval Requests</relationshipLabel>
        <relationshipName>ICR_History_Approval_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IC_Pending_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IC Pending Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Cards Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedUW_Approved_CR__c</fullName>
        <label>MedUW Approved CR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Std_Books__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Non-Std Books</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Standard_Books__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Standard Books</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paperwork_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paperwork Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pooled_Non_Pooled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pooled/Non-Pooled</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rates_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rates Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix_Count__c</fullName>
        <label>Suffix Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Docs_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Docs Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Days</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UW_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UW Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Support_Approved_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Support Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Support_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Support Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ICR History Approval Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ICR History  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICR History Approval Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>